# statdata

./: CMakeLists.txt  README.md  build.sh  task.md  task.txt
src/: main.c  statdata.c  statdata.h
tests/: all_tests.c
